--- a/quoraBlog/static/css/style2.css
+++ b/quoraBlog/static/css/style2.css
@@ -7,7 +7,7 @@
 .hero{
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(engg.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(/assets/img/engg.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
