--- a/quoraBlog/templates/base.html
+++ b/quoraBlog/templates/base.html
@@ -11,6 +11,13 @@
     {% endif %}
 </head>
 <body>
+    {% if messages %}
+        {% for msg in messages %}
+            <div>
+                {{ msg }}
+            </div>
+        {% endfor %}
+    {% endif %}
     {% block content %} {% endblock %}
 </body>
 </html>
