--- a/quoraBlog/templates/homePage.html
+++ b/quoraBlog/templates/homePage.html
@@ -5,7 +5,7 @@
     <br>
     {% for post in keyPosts %}
         <h2>{{ post.title }}</h2>
-        <p>By {{ post.author }} on {{ post.date }}</p>
+        <p>By {{ post.author }} on {{ post.date_posted|date:"F d, Y" }}</p>
         <p>{{ post.content }}</p>
     {% endfor %}
 {% endblock content %}
