--- a/quoraBlog/templates/login_ui.html
+++ b/quoraBlog/templates/login_ui.html
@@ -49,7 +49,7 @@
             position: absolute;
             width: 110px;
             height: 100%;
-            background: linear-gradient(to right, #106eea, #06eeff);
+            background: linear-gradient(to right,  #4ce980, #199456);
             border-radius: 30px;
             transition: .5s;
         }
@@ -92,7 +92,7 @@
             cursor: pointer;
             display: block;
             margin: auto;
-            background: linear-gradient(to right, #106eea, #06eeff);
+            background: linear-gradient(to right, #4ce980, #199456);
             border: 0;
             outline: none;
             border-radius: 30px;
@@ -118,8 +118,8 @@
         }
     </style>
     <head>
-        <title>Login and Registration form</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'static/css/style2.css' %}">
+        <title>Somaiya Quora login</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'static/css/login.css' %}">
     </head>
     <body>
         <div class="hero">
