--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -7,7 +7,7 @@
                 <legend>
                     Join Today
                 </legend>
-                {{ form }}
+                {{ form.as_p }}
             </fieldset>
             <div>
                 <button type="submit">Sign up</button>
