--- a/quoraBlog/templates/txt_sum.html
+++ b/quoraBlog/templates/txt_sum.html
@@ -63,7 +63,6 @@
       </div>
     </div><!-- End Breadcrumbs -->
 
-    <div>
-        hfdsafj
-        new adddition in this file for sample commit
+    <div style="text-align: center;">
+        Please input your text here
     </div>
