Registration styling updated

--- a/quoraBlog/templates/profile.html
+++ b/quoraBlog/templates/profile.html
@@ -42,8 +42,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="about.html">Profile</a></li>
+          <li><a href={{home}}>Home</a></li>
+          <li class="active"><a href={{profile}}>Profile</a></li>
           <li><a href="courses.html">Blogs</a></li>
           <li><a href="events.html">Posts</a></li>
 
