--- a/quoraBlog/templates/txt_sum.html
+++ b/quoraBlog/templates/txt_sum.html
@@ -78,6 +78,9 @@
     <div style="text-align: center;">
       Your summarised text is:
     </div>
+    <br>
+    <input type="text" id="name" name="name" requiredminlength="4" maxlength="8" size="75" style="position: fixed; top: 30%; left: 50%; transform: translate(-50%,-50%);">
+
 
 
 
