--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -1,22 +1,187 @@
-{% extends "base.html" %}
-{% block content %}
-    <div>
-        <form action="" method="POST">
-            {% csrf_token %}
-            <fieldset>
-                <legend>
-                    Join Today
-                </legend>
-                {{ form.as_p }}
-            </fieldset>
-            <div>
-                <button type="submit">Sign up</button>
+{% load static %}
+<!DOCTYPE html>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            font-family: sans-serif;
+        }
+        
+        .hero{
+            height: 100%;
+            width: 100%;
+            background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url(../static/img/engg.jpg);
+            background-position: center;
+            background-size: cover;
+            position: absolute;
+        }
+        
+        .form-box{
+            width: 380px;
+            height: 480px;
+            position: relative;
+            margin: 6% auto;
+            background: #ffffff;
+            padding: 5px;
+            overflow: hidden;
+        }
+        
+        .button-box{
+            width: 220px;
+            margin: 35px auto;
+            position: relative;
+            box-shadow: 0 0 20px 9px #ff61241f;
+            border-radius: 30px;
+        }
+        
+        .toggle-btn{
+            padding: 10px 30px;
+            cursor: pointer;
+            background: transparent;
+            border: 0;
+            outline: none;
+            position: relative;
+        }
+        
+        #btn{
+            top: 0;
+            left: 0;
+            position: absolute;
+            width: 110px;
+            height: 100%;
+            background: linear-gradient(to right,  #4ce980, #199456);
+            border-radius: 30px;
+            transition: .5s;
+        }
+        
+        .social-icons{
+            margin: 30px auto;
+            text-align: center;
+        }
+        
+        .social-icons img{
+            width: 30px;
+            margin: 0 12px;
+            box-shadow: 0 0 20px 0 #7f7f7f3d;
+            cursor: pointer;
+            border-radius: 50%;
+        }
+        
+        .input-group{
+            top: 150px;
+            position: absolute;
+            width: 300px;
+            transition: .5s;
+        }
+        
+        .input-field{
+            width: 100%;
+            padding: 10px 0;
+            margin: 5px 0;
+            border-left: 0;
+            border-top: 0;
+            border-right: 0;
+            border-bottom: 1px solid #999;
+            outline-style: none;
+            background: transparent;
+        }
+        
+        .submit-btn{
+            width: 85%;
+            padding: 10px 30px;
+            cursor: pointer;
+            display: block;
+            margin: auto;
+            background: linear-gradient(to right, #4ce980, #199456);
+            border: 0;
+            outline: none;
+            border-radius: 30px;
+        }
+        
+        .check-box{
+            margin: 30px 10px 30px 0;
+        }
+        
+        span{
+            color: #777;
+            font-size: 12px;
+            bottom: 68px;
+            position: absolute;
+        }
+        
+        #login{
+            left: 50px;
+        }
+        
+        #register{
+            left: 450px;
+        }
+    </style>
+    <head>
+        <title>Somaiya Quora login</title>
+        <link rel="stylesheet" type="text/css" href="{% static 'static/css/login.css' %}">
+    </head>
+    <body>
+        <div class="hero">
+            <div class="form-box">
+                <div class="button-box">
+                    <div id="btn"></div>
+                    <button type="button" class="toggle-btn" onclick="login()">Register</button>
+                    <button type="button"  class="toggle-btn" onclick="register()">Login</button>
+                </div>
+                <!-- <div class="social-icons">
+                    <img src="{% static 'img/fb.png' %}" alt="fbicon">
+                    <img src="{% static 'img/gp.png' %}" alt="gpicon">
+                </div> -->
+                <form id="login" method="POST" class="input-group">
+                    {% csrf_token %}
+                    <div type="text" class="input-field" placeholder="User Id" required>
+                        {{form.username.label}}
+                        {{form.username}}
+                    </div>
+                    <div type="text" class="input-field" placeholder="Email" required>
+                        {{form.email.label}}
+                        {{form.email}}
+                    </div>
+                    <div type="text" class="input-field" placeholder="Password" required>
+                        {{form.password1.label}}
+                        {{form.password1}}
+                    </div>
+                    <div type="text" class="input-field" placeholder="Confirm Password" required>
+                        {{form.email.label}}
+                        {{form.email}}
+                        {{form.passsword2.label}}
+                    </div>
+                    <br><br>
+                    
+
+
+                    <button type="submit" class="submit-btn">Register</button>                    
+                </form>
+                
             </div>
-        </form>
-        <div>
-            <small>
-                Already have account ?  <a href="#">Sign In</a>
-            </small>
         </div>
-    </div>
-{% endblock content %}
+        <!-- <script>
+            var x = document.getElementById("login");
+            var y = document.getElementById("register");
+            var z = document.getElementById("btn");
+
+            function register(){
+                x.style.left = "-400px";
+                y.style.left = "50px";
+                z.style.left = "110px";
+            }
+
+            function login(){
+                x.style.left = "50px";
+                y.style.left = "450px";
+                z.style.left = "0px";
+            }
+
+        </script> -->
+    </body>
+</html>
+
+
+{{form.passsword2.label}}
+                        {{form.passsword2}}
