--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -17,7 +17,7 @@
         }
         
         .form-box{
-            width: 380px;
+            width: 420px;
             height: 480px;
             position: relative;
             margin: 6% auto;
@@ -70,7 +70,7 @@
         .input-group{
             top: 150px;
             position: absolute;
-            width: 300px;
+            width: 320px;
             transition: .5s;
         }
         
@@ -148,9 +148,8 @@
                         {{form.password1}}
                     </div>
                     <div type="text" class="input-field" placeholder="Confirm Password" required>
-                        {{form.email.label}}
-                        {{form.email}}
-                        {{form.passsword2.label}}
+                        {{form.password2.label}}
+                        {{form.password2}}
                     </div>
                     <br><br>
                     
@@ -183,5 +182,3 @@
 </html>
 
 
-{{form.passsword2.label}}
-                        {{form.passsword2}}
