login page changed

--- a/quoraBlog/templates/login_ui.html
+++ b/quoraBlog/templates/login_ui.html
@@ -119,7 +119,7 @@
     </style>
     <head>
         <title>Somaiya Quora login</title>
-        <link rel="stylesheet" type="text/css" href="{% static 'static/css/login.css' %}">
+        <!-- <link rel="stylesheet" type="text/css" href="{% static 'static/css/login.css' %}"> -->
     </head>
     <body>
         <div class="hero">
