--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -179,8 +179,8 @@
         <div class="col-lg-2 col-md-6 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Profile</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href={{home}}>Home</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href={{profile}}>Profile</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Blogs</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Logout</a></li>
           </ul>
