--- a/quoraBlog/templates/index.html
+++ b/quoraBlog/templates/index.html
@@ -42,14 +42,14 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="about.html">Profile</a></li>
-          <li><a href="courses.html">Blogs</a></li>
-          <li><a href="events.html">Posts</a></li>
+          <li class="active"><a href={{home}}>Home</a></li>
+          <li><a href={{profile}}>Profile</a></li>
+          <li><a href={{blogs}}>Blogs</a></li>
+          <li><a href=>Posts</a></li>
+          <li><a href={{login_page}} >Login</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="courses.html" class="get-started-btn">Logout</a>
 
     </div>
   </header><!-- End Header -->
