--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -83,9 +83,9 @@
                 <p>Machine learning is the study of computer algorithms that improve automatically through experience. It is seen as a part of artificial intelligence.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainers/trainer-1.jpg' %}" class="img-fluid" alt="...">
+                    <img src="{% static 'img/trainer-1.jpg' %}" class="img-fluid" alt="...">
                     <!-- <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt=""> -->
-                    <span>Vartika</span>
+                    <span>Viraj</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;50
@@ -110,9 +110,9 @@
                 <p>Search engine optimization is the process of improving the quality and quantity of website traffic to a website or a web page from search engines. SEO targets unpaid traffic rather than direct traffic or paid traffic.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainers/trainer-2.jpg' %}" class="img-fluid" alt="...">
+                    <img src="{% static 'img/trainer-2.jpg' %}" class="img-fluid" alt="...">
                     <!-- <img src="assets/img/trainers/trainer-2.jpg" class="img-fluid" alt=""> -->
-                    <span>Viraj</span>
+                    <span>Vartika</span>
                   </div>
                   <div class="trainer-rank d-flex align-items-center">
                     <i class="bx bx-user"></i>&nbsp;35
@@ -137,7 +137,7 @@
                 <p>A supply chain is the network of all the individuals, organizations, resources, activities and technology involved in the creation and sale of a product. A supply chain encompasses everything from the delivery of source materials from the supplier to the manufacturer through to its eventual delivery to the end user.</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
-                    <img src="{% static 'img/trainers/trainer-3.jpg' %}" class="img-fluid" alt="...">
+                    <img src="{% static 'img/trainer-3.jpg' %}" class="img-fluid" alt="...">
                     <!-- <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt=""> -->
                     <span>Aniket</span>
                   </div>
