--- a/quoraBlog/templates/profile.html
+++ b/quoraBlog/templates/profile.html
@@ -73,7 +73,7 @@
             <img src="{% static 'img/about.jpg' %}" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Who is Vartika Gupta?</h3>
+            <h3>Who is {{ user.username }}?</h3>
             <p class="font-italic">
               Computer Engineering Student of the batch 2018. My interests include-
             </p>
