--- a/quoraBlog/templates/index.html
+++ b/quoraBlog/templates/index.html
@@ -42,11 +42,11 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href={{home}}>Home</a></li>
-          <li><a href={{profile}}>Profile</a></li>
-          <li><a href={{blogs}}>Blogs</a></li>
-          <li><a href=>Posts</a></li>
-          <li><a href={{login_page}} >Login</a></li>
+          <li class="active"><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'profile' %}">Profile</a></li>
+          <li><a href="{% url 'blogs' %}">Blogs</a></li>
+          <li><a href="{% url 'txt_sum' %}">TxtSum</a></li>
+          <li><a href="{% url 'login' %}" >Login</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
