--- a/quoraBlog/templates/profile.html
+++ b/quoraBlog/templates/profile.html
@@ -42,10 +42,11 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href={{home}}>Home</a></li>
-          <li class="active"><a href={{profile}}>Profile</a></li>
-          <li><a href="courses.html">Blogs</a></li>
-          <li><a href="events.html">Posts</a></li>
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li class="active"><a href="{% url 'profile' %}">Profile</a></li>
+          <li><a href="{% url 'blogs' %}">Blogs</a></li>
+          <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
+
 
         </ul>
       </nav><!-- .nav-menu -->
