--- a/quoraBlog/templates/txt_sum.html
+++ b/quoraBlog/templates/txt_sum.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Summarise your texts</title>
+  <title>Text Summariser</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -42,10 +42,10 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="about.html">Profile</a></li>
-          <li><a href="courses.html">Blogs</a></li>
-          <li><a href="events.html">Posts</a></li>
+          <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'profile' %}">Profile</a></li>
+          <li><a href="{% url 'blogs' %}">Blogs</a></li>
+          <li class="active"><a href="{% url 'txt_sum' %}">TxtSum</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -69,17 +69,20 @@
     <div style="text-align: center;">
         Please input your text here
     </div>
-    {% csrf_token %}
-    
+   
+    <form action="/txt_sum/" method="post">
+      {% csrf_token %}
+      {{form.as_p}}
 
-    <input type="text" id="name" name="name" requiredminlength="4" maxlength="8" size="75" style="position: fixed; top: 30%; left: 50%; transform: translate(-50%,-50%);">
-    {{response}}
     <br><br>
     <input type="submit" style="position: fixed; top: 35%; left: 50%; transform: translate(-50%,-50%);">
+    </form>
+
     <br><br>
     <div style="text-align: center;">
       Your summarised text is:
     </div>
+    {% block content %}  {{summary}} {% endblock content %}
     <br>
     <input type="text" id="name" name="name" requiredminlength="4" maxlength="8" size="75" style="position: fixed; top: 30%; left: 50%; transform: translate(-50%,-50%);">
 
