--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -127,7 +127,7 @@
                 <div class="button-box">
                     <div id="btn"></div>
                     <button type="button" class="toggle-btn" onclick="login()">Login</button>
-                    <button type="button" class="toggle-btn" onclick="register()">Register</button>
+                    <button type="button" class="toggle-btn" > <a href="{% url 'register' %}"></a> Register</button>
                 </div>
                 <!-- <div class="social-icons">
                     <img src="{% static 'img/fb.png' %}" alt="fbicon">
