--- a/quoraBlog/templates/profile.html
+++ b/quoraBlog/templates/profile.html
@@ -45,6 +45,7 @@
           <li><a href="{% url 'home' %}">Home</a></li>
           <li class="active"><a href="{% url 'profile' %}">Profile</a></li>
           <li><a href="{% url 'blogs' %}">Blogs</a></li>
+          <li><a href="{% url 'post-create' %}">Post</a></li>
           <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
 
 
