--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -45,11 +45,14 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">Profile</a></li>
           <li class="active"><a href="courses.html">Blogs</a></li>
-          <li><a href="trainers.html">Communities</a></li>
+          <li><a href="{% url 'post-create' %}">Post</a></li>
+          <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
+          <li><a href="{% url 'logout' %}">Logout</a></li>
+
+
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="courses.html" class="get-started-btn">Logout</a>
 
     </div>
   </header><!-- End Header -->
