--- a/quoraBlog/templates/quoraBlog/post_form.html
+++ b/quoraBlog/templates/quoraBlog/post_form.html
@@ -43,14 +43,19 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">Profile</a></li>
-          <li class="active"><a href="courses.html">Blogs</a></li>
-          <li><a href="trainers.html">Communities</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'blogs' %}">Blogs</a></li>
+            <li class="active"><a href="{% url 'post-create' %}">Post</a></li>
+            <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
+          {% else %}
+            <li><a href="{% url 'login' %}" >Login</a></li>
+            <li><a href="{% url 'register' %}" >Register</a></li>
+          {% endif %}
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="courses.html" class="get-started-btn">Logout</a>
 
     </div>
   </header><!-- End Header -->
