--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -42,12 +42,11 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">Profile</a></li>
-          <li class="active"><a href="courses.html">Blogs</a></li>
-          <li><a href="{% url 'post-create' %}">Post</a></li>
-          <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
-          <li><a href="{% url 'logout' %}">Logout</a></li>
+          <li><a href="{% url 'profile' %}">Profile</a></li>
+            <li><a href="{% url 'blogs' %}">Blogs</a></li>
+            <li><a href="{% url 'post-create' %}">Post</a></li>
+            <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
+            <li><a href="{% url 'logout' %}">Logout</a></li>
 
 
         </ul>
@@ -81,7 +80,7 @@
                   <h4>{{ post.group }}</h4>
                 </div>
 
-                <h3><a href="course-details.html">{{ post.title }}</a></h3>
+                <h3><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h3>
                 <p>{{ post.content }}</p>
                 <div class="trainer d-flex justify-content-between align-items-center">
                   <div class="trainer-profile d-flex align-items-center">
