--- a/quoraBlog/templates/quoraBlog/post_detail.html
+++ b/quoraBlog/templates/quoraBlog/post_detail.html
@@ -98,12 +98,32 @@
           </div>
         </div>
         
+        <div class="column">
         {% if object.author == user %}
           <div style="padding: 20px;">
             <a class="btn btn-secondary btn-sm mt-1 mb-1"  href="{% url 'post-update' object.id %}">Update</a>
             <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
           </div>
-        {% endif %} 
+        {% endif %}
+
+        <h2>Comments</h2>
+        {% if not post.comments.all %}
+          <p>No comments yet</p>
+        {% else %}
+          {% for comm in post.comments.all %}
+            <strong>
+            {{ comm.name }} - {{ comm.date_posted }}
+            </strong>
+            <br/>
+            {{ comm.content }}
+            <br>
+            <hr>
+          {% endfor %}
+        {% endif %}
+        <br>
+        <hr>
+        <a href="{% url 'addComment' post.pk %}">Add comment</a>
+      </div>
     </div>
 
   </main><!-- End #main -->
