--- a/users/templates/logout.html
+++ b/users/templates/logout.html
@@ -44,10 +44,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="{% url 'home' %}">Home</a></li>
+          <li><a href="{% url 'login' %}">Login</a></li>
+
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="{% url 'login' %}" class="get-started-btn">Login</a>
 
     </div>
   </header><!-- End Header -->
@@ -57,7 +58,7 @@
     <!-- ======= Breadcrumbs ======= -->
     <div class="breadcrumbs">
       <div class="container">
-        <h2>You have been Logged-out</h2>
+        <h2>You have been Logged out successfully</h2>
         <!-- <p>The blogs relevant to this community! </p> -->
       </div>
     </div><!-- End Breadcrumbs -->
