--- a/quoraBlog/templates/blogs.html
+++ b/quoraBlog/templates/blogs.html
@@ -42,6 +42,8 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
+          <li><a href="{% url 'home' %}">Home</a></li>
+
           <li><a href="{% url 'profile' %}">Profile</a></li>
             <li><a href="{% url 'blogs' %}">Blogs</a></li>
             <li><a href="{% url 'post-create' %}">Post</a></li>
