--- a/quoraBlog/templates/quoraBlog/post_detail.html
+++ b/quoraBlog/templates/quoraBlog/post_detail.html
@@ -44,9 +44,11 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           {% if user.is_authenticated %}
+          <li><a href="{% url 'home' %}">Home</a></li>
+
             <li><a href="{% url 'profile' %}">Profile</a></li>
-            <li><a href="{% url 'blogs' %}">Blogs</a></li>
-            <li class="active"><a href="{% url 'post-create' %}">Post</a></li>
+            <li class="active"><a href="{% url 'blogs' %}">Blogs</a></li>
+            <li ><a href="{% url 'post-create' %}">Post</a></li>
             <li ><a href="{% url 'txt_sum' %}">TxtSum</a></li>
             <li><a href="{% url 'logout' %}">Logout</a></li>
           {% else %}
@@ -88,11 +90,7 @@
                   <img src="{% static 'img/trainer-1.jpg' %}" class="img-fluid" alt="">
                   <span>{{ post.author }}</span>
                 </div>
-                <div class="trainer-rank d-flex align-items-center">
-                  <i class="bx bx-user"></i>&nbsp;50
-                  &nbsp;&nbsp;
-                  <i class="bx bx-heart"></i>&nbsp;65
-                </div>
+                
               </div>
             </div>
           </div>
@@ -112,8 +110,8 @@
         {% else %}
           {% for comm in post.comments.all %}
             <strong>
-            {{ comm.name }} - {{ comm.date_posted }}
-            </strong>
+            {{ comm.name }} - {{ comm.date_posted }} by {{ user.username}}
+            </strong> 
             <br/>
             {{ comm.content }}
             <br>
