--- a/quoraBlog/templates/profile.html
+++ b/quoraBlog/templates/profile.html
@@ -72,7 +72,7 @@
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="{% static 'img/about.jpg' %}" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
+         <!-- <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
             <h3>Who is {{ user.username }}?</h3>
             <p class="font-italic">
               Name- {{ user.profile.user }}<br>
@@ -80,7 +80,7 @@
             </p>
             <p class="font-italic">
               {{ user.profile.bio }}
-            </p>
+            </p>-->
             {% block content %}
             <form method="POST" enctype="multipart/form-data">
               {% csrf_token %}
